--- a/index.html
+++ b/index.html
@@ -19,20 +19,34 @@
             border-radius: 10px;
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.1);
         }
-        input, button {
-            width: 100%;
+        label {
+            display: block;
+            text-align: left;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        input {
+            width: calc(100% - 24px);
             margin: 10px 0;
             padding: 12px;
             font-size: 16px;
             border-radius: 5px;
             border: 1px solid #ccc;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         button {
+            width: 100%;
             background-color: #007BFF;
             color: white;
             border: none;
             cursor: pointer;
             transition: 0.3s;
+            padding: 12px;
+            font-size: 16px;
+            border-radius: 5px;
+            margin-top: 15px;
         }
         button:hover {
             background-color: #0056b3;
